# zero2prod

./: Cargo.toml  docker-compose.yml
.github/workflows/: general.yml
migrations/: 20211106231736_create_subscriptions_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
